# tencatl

./: .travis.yml  CMakeLists.txt  README.md
include/tencatl/: lexer.h
src/: lexer-printer.cc  lexer.cc
tests/: CMakeLists.txt  test-lexer.cc
tests/kaleidoscope/: kal-1.te
