add_executable(test-lexer test-lexer.cc)
target_include_directories(test-lexer PRIVATE SYSTEM ${Boost_INCLUDE_DIRS})
target_link_libraries(test-lexer lexer ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
target_compile_definitions(test-lexer PRIVATE TENCATL_TEST_DIR="${CMAKE_SOURCE_DIR}/tests/")
add_test(NAME TestLexer COMMAND test-lexer)